2025-02-05T12:14:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13157113819 # 802
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-05
* notice: last 14d: unq all: 41 73
* notice: prev accum: outdated-unq outdated-all / unq all: 3849 8418 / 3905 8494
* notice: next accum: outdated-unq outdated-all / unq all: 3849 8418 / 3906 8495
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -4 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-22 2025-02-05]

2025-02-04T12:15:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13135208247 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
* notice: last 14d: unq all: 44 76
* notice: prev accum: outdated-unq outdated-all / unq all: 3846 8415 / 3904 8493
* notice: next accum: outdated-unq outdated-all / unq all: 3849 8418 / 3905 8494
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-01-21] / [2025-02-04]

2025-02-04T00:38:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13125798273 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
* notice: last 14d: unq all: 45 76
* notice: prev accum: outdated-unq outdated-all / unq all: 3846 8415 / 3903 8492
* notice: next accum: outdated-unq outdated-all / unq all: 3846 8415 / 3904 8493
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -2 / +16 +24 -0 -0 / 16 24
* notice: removed / changed dates: [] / [2025-01-21 2025-02-03]

2025-02-03T12:14:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13113227875 # 798