@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-05T12:14:43Z",
-  "count_outdated" : 8418,
-  "uniques_outdated" : 3849,
+  "timestamp" : "2025-02-06T00:38:45Z",
+  "count_outdated" : 8423,
+  "uniques_outdated" : 3853,
   "count" : 8495,
   "uniques" : 3906,
   "clones" : [
-    {
-      "timestamp": "2025-01-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 4, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 3, 4 ]
-    },
     {
       "timestamp": "2025-01-23T00:00:00Z",
       "count": 4,
