@@ -1,12 +1,7 @@
 {
-  "count": 73,
+  "count": 72,
   "uniques": 41,
   "clones": [
-    {
-      "timestamp": "2025-01-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-23T00:00:00Z",
       "count": 4,
